--- a/html/registro_consumo.html
+++ b/html/registro_consumo.html
@@ -18,7 +18,7 @@
                 <a href="index.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
                 <a href="/html/cadastro_suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
                 <a href="/html/registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
+                <a href="/html/sair.html" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
