--- a/html/cadastro_suplemento.html
+++ b/html/cadastro_suplemento.html
@@ -5,52 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Suplementos Alimentares</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <header class="text-center mb-4">
-            <h1>Gerenciamento de Suplementos Alimentares</h1>
-        </header>
+    <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-dark border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading text-white">
+                <a href="/html/menu_Principal.html" class="list-group-item list-group-item-action bg-dark text-white"> Dashboard</a>
+                </div>
+            <div class="list-group list-group-flush">
+                <a href="perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
+                <a href="cadastro_Suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
+                <a href="registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
+                <a href="sair.html" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
+            </div>
+        </div>
+        <!-- /#sidebar-wrapper -->
 
-        <section class="mb-4">
-            <h2>Adicionar Novo Suplemento</h2>
-            <form id="suplemento-form">
-                <div class="form-group">
-                    <label for="nome">Nome:</label>
-                    <input type="text" class="form-control" id="nome" name="nome" required>
-                </div>
-                <div class="form-group">
-                    <label for="marca">Marca:</label>
-                    <input type="text" class="form-control" id="marca" name="marca" required>
-                </div>
-                <div class="form-group">
-                    <label for="tipo">Tipo:</label>
-                    <input type="text" class="form-control" id="tipo" name="tipo" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Adicionar</button>
-            </form>
-        </section>
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+                <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+            </nav>
 
-        <section>
-            <h2>Lista de Suplementos</h2>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nome</th>
-                        <th>Marca</th>
-                        <th>Tipo</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Dados dos suplementos serão inseridos aqui -->
-                </tbody>
-            </table>
-        </section>
+            <div class="container mt-5">
+                <header class="text-center mb-4">
+                    <h1>Gerenciamento de Suplementos Alimentares</h1>
+                </header>
+
+                <section class="mb-4">
+                    <h2>Adicionar Novo Suplemento</h2>
+                    <form id="suplemento-form">
+                        <div class="form-group">
+                            <label for="nome">Nome:</label>
+                            <input type="text" class="form-control" id="nome" name="nome" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="marca">Marca:</label>
+                            <input type="text" class="form-control" id="marca" name="marca" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="tipo">Tipo:</label>
+                            <input type="text" class="form-control" id="tipo" name="tipo" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </form>
+                </section>
+
+                <section>
+                    <h2>Lista de Suplementos</h2>
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nome</th>
+                                <th>Marca</th>
+                                <th>Tipo</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Dados dos suplementos serão inseridos aqui -->
+                        </tbody>
+                    </table>
+                </section>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
     </div>
+    <!-- /#wrapper -->
 
+    <!-- Bootstrap core JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
