--- a/html/registro_consumo.html
+++ b/html/registro_consumo.html
@@ -44,6 +44,10 @@
                         <label for="data">Data de Consumo</label>
                         <input type="date" class="form-control" id="data">
                     </div>
+                    <div class="form-group">
+                        <label for="data">Quantidade Consumida</label>
+                        <input type="text" class="form-control" id="Quantidade">
+                    </div>
                     <button type="submit" class="btn btn-primary">Registrar Consumo</button>
                 </form>
             </div>
