--- a/html/cadastro_suplemento.html
+++ b/html/cadastro_suplemento.html
@@ -18,7 +18,9 @@
                 <a href="perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
                 <a href="cadastro_Suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
                 <a href="registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
+                <a href="sobre.html" class="list-group-item list-group-item-action bg-dark text-white">Sobre</a>
                 <a href="sair.html" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
+                
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
