--- a/html/index_Cadastro_User.html
+++ b/html/index_Cadastro_User.html
@@ -13,8 +13,9 @@
             <a class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold" href="#">NutriMentor</a>
             <div class="collapse navbar-collapse" id="topNavBar">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Entrar</a>
+                    <li class="nav-item d-flex">
+                        <a class="nav-link me-2" href="login.html">Entrar</a>
+                        <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
                 </ul>
             </div>
