--- a/html/menu_Principal.html
+++ b/html/menu_Principal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,7 @@
                 <a href="/html/perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
                 <a href="/html/cadastro_suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
                 <a href="/html/registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
+                <a href="/html/sobre.html" class="list-group-item list-group-item-action bg-dark text-white">Sobre</a>
                 <a href="/html/sair.html" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
             </div>
         </div>
