--- a/html/sair.html
+++ b/html/sair.html
@@ -13,9 +13,10 @@
         <div class="bg-dark border-right" id="sidebar-wrapper">
             <div class="sidebar-heading text-white">Menu</div>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
+                <a href="perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
+                <a href="cadastro_suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
+                <a href="registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
+                <a href="sobre.html" class="list-group-item list-group-item-action bg-dark text-white">Sobre</a>
                 <a href="#" id="logout" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
             </div>
         </div>
