--- a/html/perfil.html
+++ b/html/perfil.html
@@ -6,75 +6,94 @@
     <title>Exibir Perfil</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 <body>
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar -->
-        <div class="bg-dark border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading text-white">
-                <a href="/html/menu_Principal.html" class="list-group-item list-group-item-action bg-dark text-white"> Dashboard</a>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Exibir Perfil</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/html/menu_Principal.html">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil.html">Exibir Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro_suplemento.html">Cadastro Suplemento</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="registro_consumo.html">Registro Consumo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sair.html">Sair</a>
+                        </li>
+                    </ul>
                 </div>
-            <div class="list-group list-group-flush">
-                <a href="perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
-                <a href="cadastro_suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
-                <a href="registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
-                <a href="sobre.html" class="list-group-item list-group-item-action bg-dark text-white">Sobre</a>
-                <a href="sair.html" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
             </div>
-        </div>
-        <!-- /#sidebar-wrapper -->
+        </nav>
+    </header>
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-            </nav>
+    <div id="page-content-wrapper">
+        <div class="container mt-5">
+            <header class="text-center mb-4">
+                <h1>Perfil do Usuário</h1>
+            </header>
 
-            <div class="container mt-5">
-                <header class="text-center mb-4">
-                    <h1>Perfil do Usuário</h1>
-                </header>
-
-                <section class="mb-4">
-                    <div class="card">
-                        <div class="card-header">
-                            Informações do Usuário
-                        </div>
-                        <div class="card-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="id">ID:</label>
-                                    <input type="text" class="form-control" id="id" name="id" value="123" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="nome">Nome:</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" value="João da Silva" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="data_nascimento">Data de Nascimento:</label>
-                                    <input type="date" class="form-control" id="data_nascimento" name="data_nascimento" value="1985-08-15" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="cpf">CPF:</label>
-                                    <input type="text" class="form-control" id="cpf" name="cpf" value="123.456.789-00" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email:</label>
-                                    <input type="email" class="form-control" id="email" name="email" value="joao.silva@example.com" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="telefone">Telefone:</label>
-                                    <input type="text" class="form-control" id="telefone" name="telefone" value="(11) 91234-5678" readonly>
-                                </div>
-                            </form>
-                        </div>
+            <section class="mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        Informações do Usuário
                     </div>
-                </section>
-            </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="id">ID:</label>
+                                <input type="text" class="form-control" id="id" name="id" value="123" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="nome">Nome:</label>
+                                <input type="text" class="form-control" id="nome" name="nome" value="João da Silva" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="data_nascimento">Data de Nascimento:</label>
+                                <input type="date" class="form-control" id="data_nascimento" name="data_nascimento" value="1985-08-15" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="cpf">CPF:</label>
+                                <input type="text" class="form-control" id="cpf" name="cpf" value="123.456.789-00" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" value="joao.silva@example.com" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="telefone">Telefone:</label>
+                                <input type="text" class="form-control" id="telefone" name="telefone" value="(11) 91234-5678" readonly>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </div>
-        <!-- /#page-content-wrapper -->
     </div>
-    <!-- /#wrapper -->
+
+    <footer>
+        <div class="container">
+            <p>Eduardo Siqueira e Diego Ravani</p>
+            <p>Gerenciador de consumo suplementos®</p>
+            <p>Copyright © 2024</p>
+            <p>Todos os direitos reservados</p>
+        </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -82,5 +101,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/static/js/script.js"></script>
 
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
 </body>
 </html>
