--- a/html/sair.html
+++ b/html/sair.html
@@ -8,26 +8,39 @@
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar -->
-        <div class="bg-dark border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading text-white">Menu</div>
-            <div class="list-group list-group-flush">
-                <a href="perfil.html" class="list-group-item list-group-item-action bg-dark text-white">Exibir Perfil</a>
-                <a href="cadastro_suplemento.html" class="list-group-item list-group-item-action bg-dark text-white">Cadastro Suplemento</a>
-                <a href="registro_consumo.html" class="list-group-item list-group-item-action bg-dark text-white">Registro Consumo</a>
-                <a href="sobre.html" class="list-group-item list-group-item-action bg-dark text-white">Sobre</a>
-                <a href="#" id="logout" class="list-group-item list-group-item-action bg-dark text-white">Sair</a>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Menu</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil.html">Exibir Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro_suplemento.html">Cadastro Suplemento</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="registro_consumo.html">Registro Consumo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="logout">Sair</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <!-- /#sidebar-wrapper -->
+        </nav>
+    </header>
 
+    <div id="wrapper">
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-            </nav>
-
             <div class="container-fluid">
                 <h1 class="mt-4">Dashboard de Suplementos Consumidos</h1>
                 <div class="row mt-4">
@@ -71,6 +84,17 @@
         <!-- /#page-content-wrapper -->
     </div>
     <!-- /#wrapper -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>Eduardo Siqueira e Diego Ravani</p>
+            <p>Gerenciador de consumo suplementos®</p>
+            <p>Copyright © 2024</p>
+            <p>Todos os direitos reservados</p>
+        </div>
+    </footer>
+    <!-- /Footer -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
