--- a/html/registro_consumo.html
+++ b/html/registro_consumo.html
@@ -6,35 +6,36 @@
     <title>Registro de Consumo</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">NutriMentor</a>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Gerenciamento de Suplementos</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="/html/menu_Principal.html">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/perfil.html">Exibir Perfil</a>
+                            <a class="nav-link" href="perfil.html">Exibir Perfil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/cadastro_suplemento.html">Cadastro Suplemento</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/html/registro_consumo.html">Registro Consumo</a>
+                            <a class="nav-link" href="cadastro_Suplemento.html">Cadastro Suplemento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/sobre.html">Sobre</a>
+                            <a class="nav-link" href="registro_consumo.html">Registro Consumo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/sair.html">Sair</a>
+                            <a class="nav-link" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sair.html">Sair</a>
                         </li>
                     </ul>
                 </div>
@@ -42,27 +43,29 @@
         </nav>
     </header>
 
-    <div class="container-fluid">
-        <h1 class="mt-4">Registro de Consumo</h1>
-        <form>
-            <div class="form-group">
-                <label for="usuario">Usuário</label>
-                <input type="text" class="form-control" id="usuario" placeholder="Nome do usuário">
-            </div>
-            <div class="form-group">
-                <label for="suplemento">Suplemento</label>
-                <input type="text" class="form-control" id="suplemento" placeholder="Nome do suplemento">
-            </div>
-            <div class="form-group">
-                <label for="data">Data de Consumo</label>
-                <input type="date" class="form-control" id="data">
-            </div>
-            <div class="form-group">
-                <label for="quantidade">Quantidade Consumida</label>
-                <input type="text" class="form-control" id="quantidade">
-            </div>
-            <button type="submit" class="btn btn-primary">Registrar Consumo</button>
-        </form>
+    <div class="container">
+        <div class="page-content-wrapper">
+            <h1 class="mt-5">Registro de Consumo</h1>
+            <form>
+                <div class="form-group">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" class="form-control" id="usuario" placeholder="Nome do usuário">
+                </div>
+                <div class="form-group">
+                    <label for="suplemento">Suplemento</label>
+                    <input type="text" class="form-control" id="suplemento" placeholder="Nome do suplemento">
+                </div>
+                <div class="form-group">
+                    <label for="data">Data de Consumo</label>
+                    <input type="date" class="form-control" id="data">
+                </div>
+                <div class="form-group">
+                    <label for="quantidade">Quantidade Consumida</label>
+                    <input type="text" class="form-control" id="quantidade">
+                </div>
+                <button type="submit" class="btn btn-primary">Registrar Consumo</button>
+            </form>
+        </div>
     </div>
 
     <footer>
@@ -74,7 +77,6 @@
         </div>
     </footer>
 
-   >
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
