--- a/html/menu_Principal.html
+++ b/html/menu_Principal.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="/html/sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/sair.html">Sair</a>
+                        <a class="nav-link" href="/html/index_Cadastro_User.html">Sair</a>
                     </li>
                 </ul>
             </div>
