--- a/html/registro_consumo.html
+++ b/html/registro_consumo.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Consumo</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-
 </head>
 <body>
 
@@ -35,7 +34,7 @@
                             <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sair.html">Sair</a>
+                            <a class="nav-link" href="/html/menu_Principal.html">Sair</a>
                         </li>
                     </ul>
                 </div>
