--- a/html/sobre.html
+++ b/html/sobre.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sair.html">Sair</a>
+                            <a class="nav-link" href="/html/menu_Principal.html">Sair</a>
                         </li>
                     </ul>
                 </div>
