--- a/html/index_Cadastro_User.html
+++ b/html/index_Cadastro_User.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <a href="login.html" class="btn btn-link">Já tem uma conta? Faça login</a>
-                                <button type="submit" class="btn btn-danger btn-lg">Criar Meu Cadastro!</button>
+                                <a href="/html/menu_Principal.html" class="btn btn-danger btn-lg">Criar Meu Cadastro!</a>
                             </div>
                         </form>
                     </div>
